# leaflet_map_server

./: README.md  backend-frontend-adapter-guide.md  container-deployment-guide.md
chart/code/: .gitignore  0_test_report.md  CMakeLists.txt  build_javafx.bat  compile_cpp_modules.bat  index_all.md  install.ps1  modules.md  split_graph.md  tasks.md
chart/code/alarm/: CMakeLists.txt
chart/code/alarm/doc/: 0_test_report.md  alarm_alert_instuction.md  api_spec.md  chart_alert_system.md  chart_alert_system_design.md  chart_alert_system_design_audit.md  chart_alert_system_design_multi_audit.md  compare_alarm_alert.md  openapi.yaml  repository_analysis.md  tasks.md
chart/code/alarm/include/: index_alarm.md
chart/code/alarm/scripts/: migrate_data.py
chart/code/alarm/src/: ais_data_adapter.cpp  alert.cpp  alert_config_service.cpp  alert_context.cpp  alert_data_access.cpp  alert_engine_factory.cpp  alert_exception.cpp  alert_judge_service.cpp  alert_push_service.cpp  alert_repository.cpp  alert_types.cpp  channel_alert_engine.cpp  chart_data_adapter.cpp  checker_adapter.cpp  collision_alert_engine.cpp  coordinate.cpp  depth_alert_engine.cpp  external_data_gateway.cpp  i_alert_engine.cpp  push_channel_adapter.cpp  repository_adapter.cpp  rest_adapter.cpp  rest_controller.cpp  ship_info.cpp  threshold_config.cpp  weather_alert_engine.cpp  weather_data_adapter.cpp  websocket_service.cpp
chart/code/alarm/tests/: CMakeLists.txt  ais_data_adapter_test.cpp  alert_config_service_test.cpp  alert_context_test.cpp  alert_data_access_test.cpp  alert_engine_factory_test.cpp  alert_judge_service_test.cpp  alert_push_service_test.cpp  alert_repository_test.cpp  alert_test.cpp  alert_types_test.cpp  channel_alert_engine_test.cpp  chart_data_adapter_test.cpp  collision_alert_engine_test.cpp  coordinate_test.cpp  depth_alert_engine_test.cpp  external_data_gateway_test.cpp  integration_test.cpp  performance_test.cpp  rest_controller_test.cpp  ship_info_test.cpp  threshold_config_test.cpp  weather_alert_engine_test.cpp  weather_data_adapter_test.cpp  websocket_service_test.cpp
chart/code/alert/: CMakeLists.txt
chart/code/alert/doc/: api_reference.md  code_review_report.md  design.md  design0.md  design_checklist.md  design_multi_audit.md  requirement_spec.md  tasks.md  tasks_ukc.md  user_manual.md
chart/code/alert/include/: index_alert.md
chart/code/alert/src/: scheduler.cpp  (+33 more)
chart/code/base/: CMakeLists.txt
chart/code/cache/: CMakeLists.txt
chart/code/cmake/: InstallConfiguration.cmake
chart/code/database/: CMakeLists.txt  database_model_design_checklist.md  index.md
chart/code/doc/: 0_test_report.md  how_to_realise_cds.md  impl_class_check.md  javafx_chart_application_design.md  javafx_chart_application_design_audit.md  jni_java_interface.md  sdk_c_api.h
chart/code/draw/: CMakeLists.txt
chart/code/feature/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  feature_model_design_checklist.md  index.md  ogc_feature.vcxproj  ogc_feature.vcxproj.filters
chart/code/geom/: CMakeLists.txt  geometry_design_glm_checklist.md
chart/code/graph/: CMakeLists.txt  graph_draw_design_glm_checklist.md
chart/code/layer/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  index.md  ogc_layer.vcxproj  ogc_layer.vcxproj.filters
chart/code/mokrender/: CMakeLists.txt
chart/code/navi/: CMakeLists.txt  README.md  chart_navi_system_design.md  chart_navi_system_design_audit.md
chart/code/proj/: CMakeLists.txt
chart/code/symbology/: CMakeLists.txt
chart/cycle/jni/: CMakeLists.txt
map_server/: CMakeLists.txt  README.md
map_server/deploy/: .env.production  HOWTO-DEPLOY.md  deploy-issues-summary.md  deploy-new.rar  docker-compose.prod.yml  start-deve.ps1  start-prod.ps1
map_server/deploy/backend/: Dockerfile  config.development.json  config.production.json
map_server/deploy/frontend/: Dockerfile.dev
map_server/deploy/init-db/: init.sql  sample-data.sql
map_server/deploy/nginx/: nginx.conf
map_server/scripts/: start-server.bat  stop-server.bat
map_server/server/: .gitignore  CMakeLists.txt  DEPLOYMENT.md  DESIGN.md  DESIGN_ENHANCED.md  IMPLEMENTATION_TASKS - 副本.md  IMPLEMENTATION_TASKS.md  README.md  TASK_REVIEW.md  TESTING_ISSUES.md  design_map_server_cycle.md  implement_tasks_deepseek3.1_priority.md  test_log_minimal.txt  test_security_deepseek.md
map_server/server/backup/: server.rar
map_server/server/cmake/: cycle-map-server-config.cmake.in  cycle-map-server-version.cmake.in
map_server/server/config/: server.crt  server.key
map_server/server/doc/: functionality-enhancement-proposals.md  implementation-status.md  implementation-summary.md
map_server/server/examples/: README.md  javascript_client.js  python_client.py
map_server/server/include/: CacheManager.h  Config.h  DatabaseManager.h  HttpServer.h  IRenderEngine.h  IRenderStrategy.h  Logger.h  PngEncoder.h  RenderEngine.h
map_server/server/sln/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cycle-map-server-lib - 副本.vcxproj  cycle-map-server-lib.vcxproj  cycle-map-server-lib.vcxproj.filters  cycle-map-server.sln  cycle-map-server.vcxproj  cycle-map-server.vcxproj.filters
map_server/server/src/: CacheManager.cpp  Config.cpp  HttpServer.cpp  Logger.cpp  PngEncoder.cpp  RenderEngine.cpp  main.cpp  main_secure.cpp
map_server/server/temp/: compile_errors_fix.md  compile_fixes.md  compile_progress.md  fix_summary.md
map_server/server/tests/: CMakeLists.txt  test_auth.cpp  test_cache.cpp  test_config.cpp  test_config_encryption.cpp  test_config_minimal.cpp  test_https_security.cpp  test_integration.cpp  test_integration_secure.cpp  test_logger.cpp  test_logger_minimal.cpp  test_logger_simple.cpp  test_main.cpp  test_performance.cpp  test_performance_optimization.cpp  test_renderer.cpp  test_security.cpp  test_service.cpp
map_server/web/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  README.md  jest.config.js  jest.setup.js  package-lock.json  vite.config.js  web.rar
map_server/web/src/: app.js
(+2603 files in other folders)
